[package]
name = "chip8-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
chip8-system = { git = "https://github.com/noirotm/chip8" }
crossbeam-channel = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sound-cpal =  { git = "https://github.com/noirotm/chip8" }
tauri = { version = "1.5", features = ["shell-open", "dialog"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
